Alterado o negrito do HTML para o CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>
-        <strong>Moda</strong>
-    </p>
+    <p>Moda</p>
 
     <table class="tabela-moda">
         <tr class="produtos-moda-th">
@@ -31,9 +29,7 @@
         </tr>
     </table>
 
-    <p>
-        <strong>Casa</strong>
-    </p>
+    <p>Casa</p>
 
     <table class="tabela-casa">
         <tr class="produtos-casa-th">
@@ -50,5 +46,4 @@
         </tr>
     </table>
 </body>
-
 </html>
