Alterado de <p> para <h2>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Moda</p>
+    <h2>Moda</h2>
 
     <table class="tabela-moda">
         <tr class="produtos-moda-th">
@@ -29,7 +29,7 @@
         </tr>
     </table>
 
-    <p>Casa</p>
+    <h2>Casa</h2>
 
     <table class="tabela-casa">
         <tr class="produtos-casa-th">
